Fix build with VIDEO support disabled. https://bugs.webkit.org/show_bug.cgi?id=174217

Unreviewed build fix.

Source/WebCore:

* page/Page.cpp:

Source/WebKit2:

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updateWebsitePolicies):

Canonical link: https://commits.webkit.org/191061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219218 268f45cc-cd09-0410-ab3c-d52691b4dbfc